Bug 1607530 - Fixing lifetime issues in promise closures;r=nika

Differential Revision: https://phabricator.services.mozilla.com/D59092